[gd_scene load_steps=4 format=3 uid="uid://di250r1b0xim6"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_yhybn"]
[ext_resource type="Texture2D" uid="uid://wx8p1ujgtoj1" path="res://graphics/projectiles/blue.png" id="2_hidwj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3v3t"]
radius = 7.0
height = 146.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_yhybn")
speed = 2000

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 4)
texture = ExtResource("2_hidwj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a3v3t")

[node name="SelfDestructionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructionTimer" to="." method="_on_self_destruction_timer_timeout"]
